VS-3842 FEAT (Spacing) Make fix more specific to component causing error

--- a/frontend/src/styles/_global-styles.scss
+++ b/frontend/src/styles/_global-styles.scss
@@ -9,10 +9,6 @@
 body {
     font-size: $font-size-body;
 
-    @media only screen and (min-width: $max-overflow-width) {
-        overflow-x: hidden;
-    }
-
     @include media-breakpoint-up(md) {
         font-size: $font-size-body-md;
     }
